Update versions: jetty from 9 to 12, wicket from 7 to 10, spring from 5 to 6
* update versions: jetty from 9 to 12, wicket from 7 to 10, spring from 5 to 6

* SSOService remote api controller

* SSOService remote api controller & Exceptions

* SSOService remote api controller

* Rename SSOHttpServiceWrapper to  SSOHttpServiceApiClient

* update SSOService

* update SSOService

* Update SSOService Api Client

* Update pom version

* update GitHub Actions

* update GitHub Actions